[tool.poetry]
name = "klmr-pylox"
version = "0.1.0"
description = ""
authors = ["Konrad Rudolph <konrad.rudolph@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "klmr", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.0"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}

[tool.poetry.scripts]
pylox = "klmr.pylox:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
